--- a/hub.css
+++ b/hub.css
@@ -84,6 +84,7 @@
   /* border: 1px solid whitesmoke; */
   box-shadow: 20px 0px 50px 0 #857f7f41;
   border-radius: 500px;
+  position: fixed;
 }
 
 .highlight {
@@ -168,7 +169,7 @@ li a {
 }
 
 .hub {
-  margin-top: 50px;
+  margin-top: 270px;
   width: 50%;
 }
 
@@ -180,18 +181,19 @@ li a {
   gap: 10px;
   display: flex;
   color: white;
-  padding-inline: 40px;
+  padding-inline: 30px;
   /* width: 160px; */
   cursor: pointer;
   /* margin-top: 2rem; */
   font-size: 17px;
   border: none;
+  margin-block: 30px;
 }
 
 .flex {
   display: flex;
   margin-inline: 80px;
-  gap: 70px;
+  gap: 100px;
 }
 
 .hub-p {
@@ -213,6 +215,7 @@ li a {
   font-weight: 800;
   font-family: "fraunces";
   width: 110%;
+  line-height: 60px;
   color: #000;
 }
 
@@ -274,6 +277,8 @@ li a {
 
 .hero {
   display: flex;
+  margin-inline: 50px;
+  gap: 20rem;
 }
 
 .explore {
@@ -282,7 +287,143 @@ li a {
 
 .paragragh {
   font-size: 18px;
-  width: 50%;
+  width: 90%;
   color: #777;
   font-family: outfit, sans-serif;
 }
+
+.hsa-tags {
+  display: grid;
+  margin-left: 0.8rem;
+  gap: 20px;
+  margin-block: 20px;
+}
+
+.hsa-wallet {
+  display: flex;
+  align-items: start;
+}
+
+.wallet-content {
+  margin-left: 1.2rem;
+}
+.wallet-head {
+  font-size: 19px;
+  opacity: 0.8;
+}
+.wallet-head2 {
+  font-size: 19px;
+  font-family: outfit, sans-serif;
+  opacity: 0.8;
+}
+
+.wallet-para {
+  color: #000;
+  font-size: 18px;
+  opacity: 0.6;
+  font-family: outfit, sans-serif;
+  width: 80%;
+}
+
+.health-btn {
+  color: #ffffff;
+  border: #fff;
+  padding: 0.95rem;
+  cursor: pointer;
+  background-color: rgb(104, 117, 201);
+  font-size: 18px;
+  gap: 10px;
+
+  display: flex;
+  margin-bottom: 200px;
+  align-content: center;
+  flex-direction: row;
+  border-radius: 600px;
+  position: relative;
+  margin-block: 20px;
+}
+
+/* body {
+  background-color: #6a4c93; /* The purple background color 
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+} */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background-color: rgb(104, 118, 209);
+}
+
+.step {
+  position: relative;
+  z-index: 1;
+  margin: 20px 0;
+}
+
+.number {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #fff;
+  border-radius: 12px;
+  color: #fff;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.slides {
+  display: flex;
+}
+
+.header {
+  font-size: 40px;
+}
+
+.sli {
+  animation: 5s ease-in-out 1s 2 normal forwards sli;
+  overflow: hidden;
+  font-size: 40px;
+  white-space: wrap;
+}
+
+@keyframes sli {
+  0% {
+    transform: translateX(0);
+  }
+  33% {
+    transform: translateY(0);
+  }
+
+  66% {
+    transform: translateY(-200px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+/* .steps {
+  background-color: rgb(104, 118, 209);
+  height: 50pc;
+  margin-top: 70px;
+}
+
+.step-head {
+  color: white;
+}
+
+.list {
+  padding: 2em;
+}
+
+.div {
+  padding-left: 3rem;
+} */
