--- a/style.css
+++ b/style.css
@@ -1055,9 +1055,7 @@ li a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  position: relative;
-  overflow: hidden;
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+  clip-path: polygon(0 0, 100%, 100% 90%, 0 100%);
 }
 
 .card p {
